refactor: update OAPI-Codegen specifications
Refs: MK8S-64
