# pkg/presentation/http/handler/intern.go
@@ -9,6 +9,7 @@ import (
 	"github.com/scality/go-errors"
 	"github.com/scality/metalk8s-registry-node-agent/pkg/domain"
 	"github.com/scality/metalk8s-registry-node-agent/pkg/presentation/http/intern"
+	"k8s.io/utils/ptr"
 )
 
 // fillSolutionArchiveFromDownloadSolutionArchiveRequestObject fills the Solution Archive object
@@ -98,10 +99,9 @@ func fillInternProblemDetailsFromAPIErrorsError(
 	dst.Status = &status
 	dst.Code = &code
 
-	if len(src.Details) > 0 {
-		detail := strings.Join(src.Details, ": ")
-		dst.Detail = &detail
-	}
+	details := []string{}
+	details = append(details, src.Details...)
+	dst.Detail = ptr.To(strings.Join(details, ": "))
 
 	if instance, ok := src.Properties["instance"]; ok {
 		instanceStr, ok := instance.(string)
@@ -110,13 +110,14 @@ func fillInternProblemDetailsFromAPIErrorsError(
 		}
 	}
 
-	if len(src.Properties) > 0 {
-		fillInstanceFromPropertiesMap(&dst.Instance, src.Properties)
-
-		errs := make(intern.Errors, 0, len(src.Properties))
-		fillInternErrorDetailsFromPropertiesMap(&errs, src.Properties)
-
-		dst.Errors = &errs
+	for key, value := range src.Properties {
+		// We consider that properties containing "path" in their name are sensitive information.
+		if !strings.Contains(key, "path") && key != "instance" {
+			if dst.AdditionalInformation == nil {
+				dst.AdditionalInformation = &map[string]interface{}{}
+			}
+			(*dst.AdditionalInformation)[key] = value
+		}
 	}
 }
 
@@ -132,34 +133,4 @@ func (h *DescribeSolutionArchive) fillProblemDetailsFromAPIErrorsError(
 	src *errors.Error,
 ) {
 	fillInternProblemDetailsFromAPIErrorsError(h.logger, dst, src, "Describe API error")
-}
-
-// fillInternErrorDetailsFromPropertiesMap fills the ErrorDetail slice from a map[string]any.
-func fillInternErrorDetailsFromPropertiesMap(
-	dst *intern.Errors,
-	src map[string]any,
-) {
-	*dst = make([]intern.ErrorDetail, 0, len(src))
-
-	for key, value := range src {
-		if strings.HasPrefix(key, "problem_") {
-			var errorDetail intern.ErrorDetail
-
-			fillInternErrorDetailFromProperty(&errorDetail, key, value)
-
-			*dst = append(*dst, errorDetail)
-		}
-	}
-}
-
-// fillInternErrorDetailFromProperty fills the ErrorDetail object from a property name and value.
-func fillInternErrorDetailFromProperty(
-	dst *intern.ErrorDetail,
-	key string, value any,
-) {
-	code := key
-	detail := fmt.Sprintf("%v", value)
-
-	dst.Code = &code
-	dst.Detail = detail
 }
