# pkg/presentation/http/handler/upload_part.go
@@ -70,12 +70,16 @@ func (h *UploadPart) genUploadChunkResponseObjectFromError(
 	h.fillProblemDetailsFromAPIErrorsError(&problemDetails, apiErr)
 
 	switch int(apiErr.Identifier / 1000) {
-	case http.StatusBadRequest, http.StatusUnprocessableEntity:
-		// TODO: Fix the status code on https://scality.atlassian.net/browse/ARTESCA-13615
-		// The status code should be 422, but the generated code uses 400.
-		// However, change this will demand changes the OpenAPI Spec.
+	case http.StatusBadRequest:
 		return extern.UploadChunk400ApplicationProblemPlusJSONResponse{
 			BadRequestApplicationProblemPlusJSONResponse: extern.BadRequestApplicationProblemPlusJSONResponse(
+				problemDetails,
+			),
+		}, nil
+
+	case http.StatusUnprocessableEntity:
+		return extern.UploadChunk422ApplicationProblemPlusJSONResponse{
+			UnprocessableEntityApplicationProblemPlusJSONResponse: extern.UnprocessableEntityApplicationProblemPlusJSONResponse(
 				problemDetails,
 			),
 		}, nil
